# agentstack

./: CLAUDE.md  CONTRIBUTING.md  README.md  agent-registry.yaml  agentstack.code-workspace  install.sh  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  tasks.toml
.claude/agents/: release-notes.md
.claude/skills/agentstack-client-sdk-essentials/: SKILL.MD
.claude/skills/agentstack-overview/: SKILL.md
.github/actions/setup/: action.yml
.github/workflows/: build-buildkit.yaml  build-postgres.yaml  release.yml  web.yml
agents/: tasks.toml
agents/canvas/: pyproject.toml
agents/chat/: Dockerfile  pyproject.toml
agents/deepagents_content_builder/: pyproject.toml
agents/form/: Dockerfile  pyproject.toml
agents/langgraph-reflection/: pyproject.toml
agents/rag/: Dockerfile  pyproject.toml
agents/stack-claw/: Dockerfile  package.json  plan.md  pyproject.toml
agents/stack-claw/src/: agent.ts
agents/stack-claw/src/stack_claw/: agent.py
apps/agentstack-cli/: pyproject.toml  tasks.toml
apps/agentstack-sdk-py/: pyproject.toml  tasks.toml
apps/agentstack-sdk-py/docs/: generate_docs.py  introspect_exports.py
apps/agentstack-sdk-ts/: package.json
apps/agentstack-server/: Dockerfile  pyproject.toml  template.env
apps/agentstack-ui/: .env.example  package.json
apps/beeai-web/: package.json
apps/keycloak-theme/: package.json
apps/lint-config/: package.json
apps/microshift-vm/: tasks.toml
docs/: docs.json
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  deployment.yaml
skills/agentstack-wrapper/: SKILL.md
(+497 files in other folders)
